Copy files from jekyll-heroku-unicorn

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 name: Your New Jekyll Site
-markdown: redcarpet
 pygments: true
+exclude:
+ - unicorn.rb
+ - README.md
+ - Procfile
+ - Gemfile
+ - Gemfile.lock
+ - config.ru
+ - vendor
