--- a/_data/glossary.yaml
+++ b/_data/glossary.yaml
@@ -11,10 +11,7 @@ glossary:
     def: "Before the Apollo 1 fire, the mission referred to as AS-503 was originally scheduled for October 1967. AS-503 eventually launched as Apollo 8, December 23 1968."
   -
     term: AS-207/208
-    def: "Before the Apollo 1 fire, AS-207/208 was to have been a dual mission with the command and lunar modules launched on separate Saturn 1Bs. AS-207 eventually launched Skylab 3 on July 28, 1973 and AS-208 launched Skylab 4 on November 16, 1978."
-  -
-    term: AS-207
-    cf: AS-207/208
+    def: "AS-207/208 (also known as AS-278) was to have been the first test of the LM in Earth orbit. It was also to have be a dual mission with the command and lunar modules launched on separate Saturn 1Bs. The mission was cancelled after the Apollo 1 fire and the Saturn 1Bs were used to launch Skylab 3 (AS-207) on July 28, 1973 and Skylab 4 (AS-208) on November 16, 1978. The LM was first tested by Apollo 5 in January 1968."
   -
     term: AS-208
     cf: AS-207/208
@@ -36,6 +33,12 @@ glossary:
   -
     term: "Gimbal Lock"
     def: "The loss of one degree of freedom in a three-dimensional space that occurs when the axes of two of the three gimbals are driven into a parallel configuration, “locking” the system into rotation in a degenerate two-dimensional space. More at [Wikipedia](https://en.wikipedia.org/wiki/Gimbal_lock)."
+  -
+    term: "GSOP"
+    cf: "Guidance System Operations Plan"
+  -
+    term: "Guidance System Operations Plan"
+    def: The GSOP was essentially the specification for how the guidance computer and its software where required to work for a specific mission. Many of GSOP’s are [available online](http://www.ibiblio.org/apollo/links.html#Guidance_System_Operations_Plans_GSOP) including the [GSOP for the cancelled AS-207/208 mission](http://www.ibiblio.org/apollo/hrst/archive/1688.pdf)
   -
     term: LEM
     cf: LM
@@ -79,6 +82,9 @@ glossary:
     term: "Dr. Battin"
     cf: "Battin, Richard"
   -
+    term: "Dick Battin"
+    cf: "Battin, Richard"
+  -
     term: "Battin, Richard"
     def: "Member of the MIT Instrumentation Lab. You can take his [MIT Astrodynamics class online](http://ocw.mit.edu/courses/aeronautics-and-astronautics/16-346-astrodynamics-fall-2008/index.htm)"
   -
@@ -94,11 +100,14 @@ glossary:
     term: "Sears, Norman E."
     def: "Member of the MIT Instrumentation Lab"
   -
+    term: "John Dahlen"
+    cf: "Dahlen, J. M."
+  -
     term: "J. Dahlen"
-    cf: "Sears, Norman E."
+    cf: "Dahlen, J. M."
   -
     term: "Dahlen, J. M."
-    def: "Member of the MIT Instrumentation Lab"
+    def: "Member of the MIT Instrumentation Lab. Director, Systems Engineering Division, Apollo Guidance and Navigation Program."
   -
     term: "J. Nevins"
     cf: "Nevins, James L."
