--- a/_data/glossary.yaml
+++ b/_data/glossary.yaml
@@ -49,7 +49,7 @@ glossary:
     cf: LM
   -
     term: LM
-    def: "[Lunar Module](https://en.wikipedia.org/wiki/Apollo_Lunar_Module). Earlier it was known as the Lunar Excursion Module and abbreviated “LEM.” Even after the name change, it continued to pronounced “lem.”"
+    def: "[Lunar Module](https://en.wikipedia.org/wiki/Apollo_Lunar_Module). Earlier it was known as the Lunar Excursion Module and abbreviated “LEM.” Even after the name change, it continued to be pronounced “lem.”"
   -
     term: LORS
     def: Lunar optical rendezvous system.
