--- a/_data/glossary.yaml
+++ b/_data/glossary.yaml
@@ -1,6 +1,9 @@
 
 --- 
 glossary:
+  -
+    term: "278"
+    cf: "AS-207/208"
   - 
     term: "200 Series"
     def: "The “200 Series” missions were those scheduled to use a Saturn IB rocket as the launch vehicle."
@@ -42,6 +45,9 @@ glossary:
     term: CDDT
     def: "Countdown Demonstration Test."
   -
+    term: CFP
+    def: "Concentric Flight Plan."
+  -
     term: CSM
     def: "[Command-Service Module](https://en.wikipedia.org/wiki/Command_Service_Module)."
   -
@@ -51,6 +57,9 @@ glossary:
     term: EVA
     def: "Extra-vehicular activity, such as space-walks and moon-walks."
   -
+    term: FCSD
+    def: "Flight Crew Support Division."
+  -
     term: FITH
     cf: 'Fire-in-the-hole'
   -
@@ -59,6 +68,9 @@ glossary:
   -
     term: FMES
     def: "Full Mission Engineering Simulator."
+  -
+    term: GCD
+    def: "Guidance Control Division."
   -
     term: "Gimbal Lock"
     def: "The loss of one degree of freedom in a three-dimensional space that occurs when the axes of two of the three gimbals are driven into a parallel configuration, “locking” the system into rotation in a degenerate two-dimensional space. More at [Wikipedia](https://en.wikipedia.org/wiki/Gimbal_lock)."
