Remove double-escaping of quotes

--- a/_data/tindallgrams-index.yaml
+++ b/_data/tindallgrams-index.yaml
@@ -1127,7 +1127,7 @@ tindallgrams:
     serial: 68-PA-T-15A
     sources: 
       - 4
-    subject: "\\\"Final\\\" review of Spacecraft 101 (Mission \\\"C\\\") Retrofire and Reentry Mission Techniques"
+    subject: "\"Final\" review of Spacecraft 101 (Mission \"C\") Retrofire and Reentry Mission Techniques"
   - 
     date: 1968-01-24
     serial: 68-PA-T-16A
